# PypeIt-development-suite

./: .gitignore  CHANGES.rst  README.md  README.rst  build_cooked  build_nires_masters  build_ql_calibs  build_ql_masters  fix_xshooter_names.py  pypeit.code-workspace  pypeit_syncraw  pypeit_test  pypit_test  setup.cfg  setup.py  source_headless_test.sh  test_priority_list
Cooked/: README  tar_up_cooked.src
coadd1d_files/: gemini_gmos_gs_ham_r400_700.coadd1d  gemini_gmos_gs_ham_r400_860.coadd1d  gemini_gnirs_32_sb_sxd.coadd1d  gemini_gnirs_echelle_32_sb_sxd.coadd1d  shane_kast_blue_600_4310_d55.coadd1d  vlt_xshooter.coadd1d  vlt_xshooter_nir-vis_Feige110.coadd1d  vlt_xshooter_nir-vis_LTT3218.coadd1d
coadd2d_files/: gemini_gnirs_32_sb_sxd.coadd2d  gemini_gnirs_echelle_32_sb_sxd.coadd2d  keck_deimos_830g_m_9000_dither.coadd2d  keck_lris_blue_multi_600_4000_d560.coadd2d  keck_mosfire_long2pos1_h.coadd2d  keck_nires_abba_nostandard_faint.coadd2d  keck_nires_abba_wstandard.coadd2d  vlt_xshooter_vis_manual.coadd2d
cooked_tests/: test_flexure.py  test_scripts.py  test_sensfunc.py
deprecated/: build_cooked
dev_algorithms/: dev_extract.py  dev_flats.py  dev_objfind.py  dev_skysub.py  dev_trace_slits.py  flat_compare.py  sensfunc_flux_coadd.readme  specobj.py
flexure_files/: keck_deimos_830g_m_8500.flex
fluxing_files/: gemini_gmos_gs_ham_r400_700.flux  gemini_gmos_gs_ham_r400_860.flux  gemini_gnirs_32_sb_sxd.flux  keck_deimos_600zd_m_6500.flux  keck_deimos_830g_lvm_8400.flux  keck_deimos_900zd_lvm_5500.flux  ldt_deveny_dv2.flux  ldt_deveny_dv6.flux  shane_kast_blue.flux  shane_kast_blue_600_4310_d55.flux  vlt_xshooter_nir.flux  (+1 more)
(+1227 files in other folders)
