[metadata]
name = pypeitdev
description = PypeIt Spectroscopic Reduction Dev
long_description = file: README.rst
long_description_content_type = text/x-rst
author = PypeIt Collaboration
author_email = pypeit@ucolick.org
license = BSD-3
url = https://github.com/pypeit/PypeIt-development-suite
edit_on_github = False
github_project = pypeit/PypeIt-development-suite
keywords = pypeit, PypeIt, astronomy, Keck, UCO, Lick, spectroscopy, data reduction
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3=False
packages = find:
python_requires = >=3.11,<3.13
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    numpy>=1.24
    astropy>=6.0
    extension-helpers>=1.0
    packaging>=22.0
    scipy>=1.9
    matplotlib>=3.7
    PyYAML>=6.0
    PyERFA>=2.0.0
    fast-histogram>=0.11
    configobj>=5.0.6
    scikit-learn>=1.2
    IPython>=8.0.0
    ginga>=5.1.0
    linetools>=0.3.2
    qtpy>=2.2.0
    pygithub
    bottleneck
    pyqt6
    scikit-image>=0.23
    specutils>=1.13
    psutil
    pytest-qt


